app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: bookstore
spec:
  selector:
    app: kiii-bookstore-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
