db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: bookstore
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
  type: NodePort
